--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -9,50 +9,69 @@ set -g prefix C-s
 set -g mouse on
 
 set-window-option -g mode-keys vi
-
+set -g base-index 1              # start indexing windows at 1 instead of 0
+set -g detach-on-destroy off     # don't exit from tmux when closing a session
+set -g escape-time 0             # zero-out escape time delay
+set -g history-limit 1000000     # increase history size (from 2,000)
+set -g renumber-windows on       # renumber all windows when any window is closed
+set -g set-clipboard on          # use system clipboard
+set -g status-position top       # macOS / darwin style
 bind-key h select-pane -L
 bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 
-set-option -g status-position top
 
-# set -g @catppuccin_flavor "mocha"
-# set -g @catppuccin_window_status_style "rounded"
-# run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
-# List of plugins
-set -g @plugin 'rose-pine/tmux'
+
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'fcsonline/tmux-thumbs'
+set -g @plugin 'sainnhe/tmux-fzf'
+set -g @plugin 'wfxr/tmux-fzf-url'
+set -g @plugin 'omerxx/catppuccin-tmux' # My fork that holds the meetings script bc I'm lazy af
+set -g @plugin 'omerxx/tmux-sessionx'
+set -g @plugin 'omerxx/tmux-floax'
+set -g @floax-width '80%'
+set -g @floax-height '80%'
+set -g @floax-border-color 'magenta'
+set -g @floax-text-color 'blue'
+set -g @floax-bind 'p'
+set -g @floax-change-path 'true'
+set -g @sessionx-bind-zo-new-window 'ctrl-y'
+set -g @sessionx-auto-accept 'off'
+set -g @sessionx-custom-paths '/Users/omerxx/dotfiles'
+set -g @sessionx-bind 'o'
+set -g @sessionx-x-path '~/dotfiles'
+set -g @sessionx-window-height '85%'
+set -g @sessionx-window-width '75%'
+set -g @sessionx-zoxide-mode 'on'
+set -g @sessionx-custom-paths-subdirectories 'false'
+set -g @sessionx-filter-current 'false'
+set -g @continuum-restore 'on'
+set -g @resurrect-strategy-nvim 'session'
+set -g @catppuccin_window_left_separator ""
+set -g @catppuccin_window_right_separator " "
+set -g @catppuccin_window_middle_separator " █"
+set -g @catppuccin_window_number_position "right"
+set -g @catppuccin_window_default_fill "number"
+set -g @catppuccin_window_default_text "#W"
+set -g @catppuccin_window_current_fill "number"
+set -g @catppuccin_window_current_text "#W#{?window_zoomed_flag,(),}"
+set -g @catppuccin_status_modules_right "directory date_time"
+set -g @catppuccin_status_modules_left "session"
+set -g @catppuccin_status_left_separator  " "
+set -g @catppuccin_status_right_separator " "
+set -g @catppuccin_status_right_separator_inverse "no"
+set -g @catppuccin_status_fill "icon"
+set -g @catppuccin_status_connect_separator "no"
+set -g @catppuccin_directory_text "#{b:pane_current_path}"
+set -g @catppuccin_meetings_text "#($HOME/.config/tmux/scripts/cal.sh)"
+set -g @catppuccin_date_time_text "%H:%M"
 
-set -g @plugin 'christoomey/vim-tmux-navigator'
-
-set -g @plugin 'rose-pine/tmux'
-
-set -g @rose_pine_variant 'main'
-set -g @rose_pine_host 'on' # Enables hostname in the status bar
-set -g @rose_pine_hostname_short 'on' # Makes the hostname shorter by using tmux's '#h' format
-set -g @rose_pine_date_time '' # It accepts the date UNIX command format (man date for info)
-set -g @rose_pine_user 'on' # Turn on the username component in the statusbar
-set -g @rose_pine_directory 'on' # Turn on the current folder component in the status ba
-
-
-# Example values for these can be:
-set -g @rose_pine_left_separator ' > ' # The strings to use as separators are 1-space padded
-set -g @rose_pine_right_separator ' < ' # Accepts both normal chars & nerdfont icons
-set -g @rose_pine_field_separator ' | ' # Again, 1-space padding, it updates with prefix + I
-set -g @rose_pine_window_separator ' - ' # Replaces the default `:` between the window number and name
-
-
-set -g @rose_pine_session_icon '' # Changes the default icon to the left of the session name
-set -g @rose_pine_current_window_icon '' # Changes the default icon to the left of the active window name
-set -g @rose_pine_folder_icon '' # Changes the default icon to the left of the current directory folder
-set -g @rose_pine_username_icon '' # Changes the default icon to the right of the hostname
-set -g @rose_pine_hostname_icon '󰒋' # Changes the default icon to the right of the hostname
-set -g @rose_pine_date_time_icon '󰃰' # Changes the default icon to the right of the date module
-set -g @rose_pine_window_status_separator "  " # Changes the default icon that appears between window names
-
-
+run '~/.tmux/plugins/tpm/tpm'
 
 
 
